# wulo-app

./: Dockerfile.legal  Dockerfile.retrieval  Readme  docker-compose.yml
ResearchCrew/: api.py  main.py  pyproject.toml  tasks.py  test_main.py
ResearchCrew/tools/: neo4j_tool.py
crew/: pyproject.toml
crew/wulo/: README.md  pyproject.toml  report.md
crew/wulo/src/wulo/: crew.py  main.py
ragtest/: .env  requirements.txt  retrieval_query.py  test_api.py  transfer_documents.py
ragtest/cache/community_reporting/: create_community_report-chat-v2-000dc0ea05c590b9d2fa8e6788c5f4bb  create_community_report-chat-v2-0a95bdf2800b3779fd3d3b26abf0a10a  create_community_report-chat-v2-0b6f4028f425afd1e85b59283c4b637b  create_community_report-chat-v2-1562ff43c823e23970ab4aa0dde28380  create_community_report-chat-v2-24b1d66ec899efceb4c833aae55d0063  create_community_report-chat-v2-2a702c370fe6286c71384f4df5b2f63b  create_community_report-chat-v2-300fdc09b45200bb0c1bac5d5069aa58  create_community_report-chat-v2-452d342944dc18897926aaaa4eabf034  create_community_report-chat-v2-4a6bef92cdd74edc73e11f9af189613b  create_community_report-chat-v2-6232ff822b9971df449bf844f73d020c  create_community_report-chat-v2-671f6574c58fcae69c75ff42e3075b45  create_community_report-chat-v2-68fe442a3bce250f7f2860fed862b5ec  create_community_report-chat-v2-69b546b3c056b4311deaf79d1fbe5f39  create_community_report-chat-v2-6c1088700292479ffd74b44f8fa49f4a  create_community_report-chat-v2-6cb7ed75fa481e9fffa3c2efad45ebe5  (+13 more)
ragtest/inputs/operation dulce/: create_final_nodes.parquet  (+1 more)
wuloCrew/: agents.py
(+271 files in other folders)
