[tool.poetry]
name = "wulo"
version = "0.1.0"
description = "wulo using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }
fastapi = "^0.112.1"
uvicorn = "^0.30.6"

[tool.poetry.scripts]
wulo = "wulo.main:run"
run_crew = "wulo.main:run"
train = "wulo.main:train"
replay = "wulo.main:replay"
test = "wulo.main:test"
run_api = "wulo.main:run_api"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
